@@ -1873,7 +1873,10 @@ def main(fakeServer=None,hookResults=None) -> int:
     #extract sys.argv in --> files,rparams,switch
     files,rparams,switches,dswitches=extractParams(params)
 
-    if len(files)==1 and rparams==[] and switches==[] and dswitches==[] and not files[0].endswith(".rmr"):
+
+    isOldSheBang = len(files)==1 and rparams==[] and switches==[] and dswitches==[] and not files[0].endswith(".rmr") # DEPRECATED
+    isNewSheBang = len(files)==1 and rparams==["i"] and switches==[] and dswitches==[] and not files[0].endswith(".rmr")
+    if isOldSheBang or isNewSheBang:
         f=files[0]
         if os.path.isfile(f):
             with open(f,"r") as fid:
@@ -1924,6 +1927,8 @@ def main(fakeServer=None,hookResults=None) -> int:
         for p in rparams:
             if p=="k":
                 outputConsole=OutputConsole.MINIMAL_ONLYKO
+            elif p=="i":
+                pass # already managed (see below ^)                
             elif p=="s":
                 saveRMR=True
             elif p=="r": #TODO: write tests for thoses 3 conditions
@@ -2030,6 +2035,7 @@ Test a http service with pre-made scenarios, whose are simple yaml files
         --b        : Open html output in browser if generated
         --s        : Save RMR file
         --r        : Replay the given RMR file in dual mode
+        --i        : Use SHEBANG params (for a single file), alone
     """
             % __version__
         )
