@@ -1,5 +1,6 @@
-- EVOL: tests on all vars, with methods too
+- EVOL: (new test system) tests on all vars, with methods too
 - EVOL: new test header syntax (header.xxx)
+- EVOL: new option "--i" for force to use shebang mode on a single file
 
 2.3.9 (1/4/20)
 - FIX: display headers in console was bugged
